--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<link rel="stylesheet" href="css/index.css">
 	</head>
 	<body>
+
+		<ul class="stage"></ul>
+
 		<script src="js/index.js"></script>
 	</body>
 </html>
